Bug 293371  [Intro] Standby page in RTL has overlapping text and images:

--- a/org.eclipse.ui.intro.universal/themes/purpleMesh/html/rtl.css
+++ b/org.eclipse.ui.intro.universal/themes/purpleMesh/html/rtl.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008 IBM Corporation and others.
+ * Copyright (c) 2008, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -82,5 +82,28 @@ div ul#eclipse-news {
 #page-content .section-title-link:hover .section-toggle-image-closed,
 #page-content .section-title-link:active .section-toggle-image-closed {
 	background-image : url(../graphics/icons/ctool/widget_closed_hov_rtl.gif);
+}
+
+#standby #links-background {
+    text-align:right;
+}
+
+#standby #page-links a {
+	text-align : right; 
+}
+
+#standby #page-links a .link-label {
+    left:auto;
+    right : 60px;
+}
+
+#standby #page-links p {
+    right : 60px;
+}  
+
+#standby #page-links a p .text {
+    margin-right:auto;
+    left:auto;
+    right : 60px;
 }
 
