--- a/org.eclipse.ui.intro.universal/themes/slate/html/rtl.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/rtl.css
@@ -94,3 +94,26 @@ div ul.news-list {
 	background-image : url(../graphics/icons/ctool/widget_closed_hov_rtl.gif);
 }
 
+#standby #links-background {
+    text-align:right;
+}
+
+#standby #page-links a {
+	text-align : right; 
+}
+
+#standby #page-links a .link-label {
+    left:auto;
+    right : 60px;
+}
+
+#standby #page-links p {
+    right : 60px;
+}  
+
+#standby #page-links a p .text {
+    margin-right:auto;
+    left:auto;
+    right : 60px;
+}
+
